# Raytracer-2020

./: .gitattributes  .gitignore  Cargo.toml  Readme.md
.github/workflows/: rust.yml
benches/: math.rs
examples/: benchmark.json  debug_normals.json  diffuse.json  focus.json  metallic.json  normals.json  spheres.json  velocity.json
input/: debug_diffuse.json  spheres.json
src/: lib.rs  main.rs  setup.rs
src/image/: format_png.rs  format_pnm.rs  image.rs  mod.rs  surface.rs  writer.rs  writer_pnm.rs
src/math/: color.rs  intersection.rs  mod.rs  ray.rs  serialization.rs  vec2.rs  vec3.rs  vector.rs
src/math/geometry/: mod.rs  sphere.rs
src/math/types/: color.rs  mod.rs  ray.rs  vec2.rs  vec3.rs  vec4.rs
src/render/: camera.rs  debug.rs  material.rs  mod.rs  parameters.rs  primitive.rs  renderer.rs  scene.rs  setup.rs  sphere.rs  statistics.rs  stats.rs
src/render/materials/: diffuse.rs  metalic.rs  metallic.rs  mod.rs  normals.rs  refractive.rs
src/render/objects/: mod.rs  sphere.rs
tests/: examples.rs  image.rs  math.rs
tests/references/: serialize_color.json  serialize_vec2.json  serialize_vec3.json  serialize_vec4.json  write_image.pnm
