[package]
name = "raytracer"
version = "0.1.0"
authors = ["Piotr Doan <doanpiotr@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
png = "0.15.2"
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
rayon = "1.3.0"

[dev-dependencies]
file_diff = "1.0.0"
bencher = "0.1.5"

[profile.release]
lto = true
debug = true

[[bench]]
name = "math"
harness = false
